email and postal code validation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                     <span class="validation"></span>
                 </label>
             </section>
+            <section>
+                <label>
+                    <p>Enter your email</p>
+                    <input type="email" name="email" id="email">
+                    <span class="validation"></span>
+                </label>
+            </section>
         </form>
     </main>
 </body>
