form submit validation 1

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <span class="validation"></span>
                 </label>
             </section>
+            <section>
+                <input type="submit" name="submit" id="submit" value="Send your Info">
+            </section>
         </form>
     </main>
 </body>
